<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_blue"
        android:orientation="vertical"
        android:padding="@dimen/padding_start_size"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:orientation="horizontal"
            android:padding="@dimen/header_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/main_header"
                android:textColor="@color/white"
                android:textSize="@dimen/header_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:orientation="vertical">

            <Button
                android:id="@+id/search_main"
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero_height_size"
                android:layout_marginBottom="@dimen/margin_bottom_size"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/main_button_size"
                app:cornerRadius="@dimen/corner_radius_size"
                app:icon="@drawable/ic_search"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/icon_padding_size"
                app:iconTint="@color/dark_blue" />

            <Button
                android:id="@+id/media_main"
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero_height_size"
                android:layout_marginBottom="@dimen/margin_bottom_size"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/media"
                android:textAllCaps="false"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/main_button_size"
                app:cornerRadius="@dimen/corner_radius_size"
                app:icon="@drawable/ic_mediateka"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/icon_padding_size"
                app:iconTint="@color/dark_blue" />

            <Button
                android:id="@+id/settings_main"
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero_height_size"
                android:layout_marginBottom="@dimen/margin_bottom_size"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/settings"
                android:textAllCaps="false"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/main_button_size"
                app:cornerRadius="@dimen/corner_radius_size"
                app:icon="@drawable/ic_settings"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/icon_padding_size"
                app:iconTint="@color/dark_blue" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>